fix overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@ html {
   background-image: linear-gradient(to bottom right, rgb(7, 57, 99), hsl(0, 3%, 12%));
   background-attachment: fixed;
   overflow-y: scroll;
-  overflow-x: scroll;
+  overflow-x: hidden;
 }
 
 body {
